# marquee-console

./: CALIBRATION_FINDINGS.md  CMakeLists.txt  README.md  build.bat
openspec/: config.yaml
openspec/changes/archive/2026-06-05-marquee-console-app/: .openspec.yaml  tasks.md  uat-signoff.md
openspec/changes/marquee-console-app/: design.md  proposal.md  tasks.md
openspec/changes/marquee-console-app/specs/console-engine/: spec.md
openspec/changes/marquee-console-app/specs/marquee-animation/: spec.md
openspec/changes/marquee-console-app/specs/rate-calibration/: spec.md
openspec/specs/console-engine/: spec.md
openspec/specs/marquee-animation/: spec.md
openspec/specs/rate-calibration/: spec.md
src/: calibrate.cpp  calibrate.h  engine.cpp  engine.h  main.cpp  marquee.cpp  marquee.h  test_harness.h  test_marquee.cpp
